; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_freeClusterManagerNodeFlags.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_freeClusterManagerNodeFlags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @freeClusterManagerNodeFlags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freeClusterManagerNodeFlags(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @listRewind(i32* %6, i32* %3)
  br label %8

8:                                                ; preds = %11, %1
  %9 = call %struct.TYPE_3__* @listNext(i32* %3)
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %4, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @sdsfree(i32 %15)
  br label %8

17:                                               ; preds = %8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @listRelease(i32* %18)
  ret void
}

declare dso_local i32 @listRewind(i32*, i32*) #1

declare dso_local %struct.TYPE_3__* @listNext(i32*) #1

declare dso_local i32 @sdsfree(i32) #1

declare dso_local i32 @listRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
